# ai-content-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  get_session.py
backend/: auth_helper.py  migrate_encrypt_sessions.py  pyproject.toml  qr_auth.py  seed_demo.py
backend/src/: config.py  crypto.py  database.py  main.py  models.py  session_manager.py
backend/src/api/: accounts.py  ai.py  automation.py  channels.py  group_chat.py  messages.py  proxies.py  warmup.py
backend/src/services/: ai_service.py  boost_service.py  bot_service.py  channel_service.py  group_chat_service.py  news_fetcher.py  profile_randomizer.py  profile_service.py  tdata_reader.py  warmup_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AIPanel.tsx  AccountSidebar.tsx  AutomationView.tsx  ChatView.tsx  LoginPage.tsx  ProxyView.tsx  WarmupView.tsx
